# Orchestration_platform

./: .gitignore  LANGGRAPH_WORKFLOW_SERVER_PROMPT.md  energy-analysis-workflow.json
dynamic-agent-workflow-server/: .env.example  README.md  docker-compose.yml  pyproject.toml
dynamic-agent-workflow-server/app/: __main__.py  main.py
dynamic-agent-workflow-server/app/api/: deps.py
dynamic-agent-workflow-server/app/core/: config.py  errors.py  logging.py  security.py
dynamic-agent-workflow-server/app/db/: collections.py  indexes.py  mongodb.py
dynamic-agent-workflow-server/app/langgraph_runtime/: checkpointing.py  compile_cache.py  dynamic_router.py  graph_builder.py  state_schema.py
dynamic-agent-workflow-server/app/llm/: registry.py  service.py  types.py
dynamic-agent-workflow-server/app/observability/: langfuse_client.py
dynamic-agent-workflow-server/app/repositories/: checkpoint_repository.py  compile_cache_repository.py  event_repository.py  run_repository.py
dynamic-agent-workflow-server/app/runtime/: event_bus.py  run_manager.py
dynamic-agent-workflow-server/app/schemas/: edge.py  node.py  validation.py  workflow.py
dynamic-agent-workflow-server/app/tests/: conftest.py  test_api_routes.py  test_compiler.py  test_graph_utils.py  test_health.py  test_indexes_spec.py  test_llm_mock_provider.py  test_llm_openai_anthropic.py  test_llm_registry.py  test_llm_service.py  test_models_api.py  test_node_executors.py  (+7 more)
dynamic-agent-workflow-server/config/: models.yaml
dynamic-agent-workflow-server/scripts/: test_energy_workflow.py  test_subflow.py
(+43 files in other folders)
